# audacity-project-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: design_principles.md  glossary.md  naming.md
docs/adr/: 0001-project-scope.md
src/audacity_project_tools/: __init__.py  __main__.py  api.py  cli.py  client.py  connection.py  converter.py  exceptions.py  models.py  parsers.py  pipe.py  process.py  scanner.py  session.py
tests/: test_client.py  test_pipe.py
tests/unit/: test_cli.py  test_client.py  test_connection.py  test_converter.py  test_import.py  test_models.py  test_parsers.py  test_pipe.py  test_process.py  test_project.py  test_scanner.py  test_session.py
