[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audacity-project-tools"
version = "0.1.0"
description = "Reliable automation and migration tools for Audacity projects."
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Audacity Project Tools contributors"}
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
