[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "audacity-project-tools"
version = "0.1.0"
description = "Tools for migrating and managing Audacity projects"
requires-python = ">=3.13"
authors = [
    {name = "Alcremi"}
]


[tool.setuptools.packages.find]
where = ["src"]
